Esqueleto del HTML al 50% Hecho

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Tarjeta de crédito válida</title>
     <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <header>
+        <nav>CARD VALIDATION</nav>
+    </header>
+    <section class="contenedor">
+        <div class="card">
+            <p>Bank</p>
+            <img src="./assest/pixlr-bg-result.png" alt="imagen del chip">
+        </div>
+    </section>
+    <footer>
+        <div class="copy">
+            <p class="copy">Todos los derechos reservados &copy; <br> Realizado Por Angie Cortés</p>
+        </div>
+
+    </footer>
     <script src="index.js" type="module"></script>
-  </body>
+</body>
+
 </html>
