--- a/src/index.html
+++ b/src/index.html
@@ -4,29 +4,37 @@
 <head>
     <meta charset="utf-8">
     <title>Tarjeta de crédito válida</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/header.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-    <header>
-        <nav>CARD VALIDATION</nav>
-    </header>
-    <section class="contenedor">
-        <div class="card">
-            <p>Bank</p>
-            <img src="./assest/pixlr-bg-result.png" alt="imagen del chip">
-        </div>
-    </section>
-    <footer>
-        <div class="copy">
-            <p class="copy">Todos los derechos reservados &copy; <br> Realizado Por Angie Cortés</p>
-        </div>
+    <section id="padre" class="contenedor">
+        <article id="imagenM" class="imagenM">
+            <img src="../src/assest/Manchester-City-Logo.png" alt="Escudo Manchester City">
+        </article>
 
-    </footer>
+
+        <section id="padre2" class="padre">
+            <article class="imagen">
+                <img src="../src/assest/pixlr-bg-result.png" alt="chip">
+            </article>
+            <article class="bienvenida2">
+                <input class="input" type="text" placeholder="Digite el numero de su tarjeta aqui">
+            </article>
+        </section>
+
+        <article>
+            <input id="ingresar" class="btn" type="button" value="Validar">
+        </article>
+
+    </section>
     <script src="index.js" type="module"></script>
 </body>
 
